# jwt-actix

./: .env  Cargo.toml  Procfile  README.md
src/: main.rs
src/controller/: users.rs
src/database/: mod.rs
src/models/: users.rs
src/service/: mod.rs  tests.rs  users.rs
